--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/core": "^8.2.2"
+    "@angular/core": "^8.2.2",
+    "firebase": "^6.4.0"
   }
 }
