--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fire-webrtc",
-  "version": "0.0.2",
-  "description": "webcompenent for p2p vedio chat usinh webrtc and a signalling server using firebase",
+  "version": "0.0.3",
+  "description": "webcompenent for p2p vedio chat using webrtc and a signalling server using firebase",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
