--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fire-webrtc",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "webcompenent for p2p vedio chat using webrtc and a signalling server using firebase",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -26,7 +26,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/core": "^8.2.2",
     "firebase": "^6.4.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SaifRehman/fire-webrtc"
+}
 }
